--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
-      <!-- Loads the specified .html file -->
+      <load src="./partials/hero.html" />
+      <load src="./partials/about.html" />
+      <load src="./partials/concerts.html" />
+      <load src="./partials/contact.html" />
     </main>
 
     <load src="./partials/footer.html" />
