layout: history section

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <load src="./partials/hero.html" />
       <load src="./partials/concerts.html" />
       <load src="./partials/about.html" />
+      <load src="./partials/history.html" />
       <load src="./partials/contact.html" />
     </main>
 
