--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/modal.html" />
 
     <main>
       <load src="./partials/hero.html" />
